[package]
name = "archy-macros"
version = "0.1.1"
edition = "2024"
description = "Procedural macros for the archy async application framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ingur/archy"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
